added an input and submit button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <header>
         <h1>Weather Dashboard</h1>
     </header>
+    <aside>
+        <h2><strong>Search a City:</strong></h2>
+        <div class="input">
+            <input type="submit" value="Submit">
+            <input type="text" class="inputValue">
+        </div>
+    </aside>
     <script src="./script.js"></script>
 </body>
 </html>
