--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Weather Dashboard</h1>
     </header>
     <aside>
+        <!-- this is where the user will input the data(city) -->
         <h2><strong>Search a City:</strong></h2>
         <div class="input">
             <input type="submit" value="Submit">
