able connect the api to function properly, need to get a different one for weather

--- a/index.html
+++ b/index.html
@@ -13,12 +13,18 @@
     </header>
     <aside>
         <!-- this is where the user will input the data(city) -->
-        <h2><strong>Search a City:</strong></h2>
         <div class="input">
-            <input type="submit" value="Submit">
-            <input type="text" class="inputValue">
+            <h2><strong>City:</strong></h2>
+            <input type="submit" value="Submit" class="buttonSubmit">
+            <input type="text" class="inputCity">
         </div>
     </aside>
+
+    <div>
+        <h1 class="cityName"></h1>
+        <p class="info"></p>
+        <p class="temp"></p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
