set variables for the needed information from the api. confirmed that this api is correct

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 
     <div>
         <h1 class="cityName"></h1>
-        <p class="info"></p>
         <p class="temp"></p>
+        <p class="humidity"></p>
+        <p class="windSpeed"></p>
+        <p class="indexUV"></p>
+
+
     </div>
     <script src="./script.js"></script>
 </body>
