--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>Weather Dashboard</h1>
+        <p id="todayDate"></p>
     </header>
     <aside>
         <!-- this is where the user will input the data(city) -->
@@ -29,6 +30,8 @@
 
 
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./script.js"></script>
 </body>
 </html>
