found the location of longatiude and latitude

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
 </head>
@@ -21,15 +22,17 @@
         </div>
     </aside>
 
-    <div>
+    <div class="todayWeather">
         <h1 class="cityName"></h1>
         <p class="temp"></p>
+        <p class="icon"></p>
         <p class="humidity"></p>
         <p class="windSpeed"></p>
         <p class="indexUV"></p>
 
 
     </div>
+    
     <script src="./script.js"></script>
 </body>
 </html>
