was able to make an if statment which will change the colour of the UV index depending on a range

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </aside>
 
     <div class="todayWeather">
-        <h1 id="cityName"></h1>
-        <p id="temp"></p>
-        <p id="icon"></p>
-        <p id="humidity"></p>
-        <p id="windSpeed"></p>
-        <p id="indexUV"></p>
+        <h1 class="cityName"></h1>
+        <p class="temp"></p>
+        <p class="icon"></p>
+        <p class="humidity"></p>
+        <p class="windSpeed"></p>
+        <p class="indexUV"></p>
 
 
     </div>
