able to get the nessary information for current day to present on the application

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         </div>
     </aside>
 
-    <div class="todayWeather">
+    <section class="todayWeather">
         <h1 class="cityName"></h1>
+        <h3 id="day"></h3>
         <p class="temp"></p>
         <p class="icon"></p>
         <p class="humidity"></p>
@@ -32,7 +33,7 @@
         <p class="indexUV"></p>
 
 
-    </div>
+    </section>
     
     <script src="./script.js"></script>
 </body>
