added the future 4 days for weather

--- a/index.html
+++ b/index.html
@@ -31,9 +31,35 @@
         <p class="humidity"></p>
         <p class="windSpeed"></p>
         <p class="indexUV"></p>
-
-
     </section>
+
+    <sectionc class="futureWeather">
+        <div class="day1">
+            <p class="temp"></p>
+            <p class="icon"></p>
+            <p class="humidity"></p>
+            <p class="windSpeed"></p>    
+        </div>
+        <div class="day2">
+            <p class="temp"></p>
+            <p class="icon"></p>
+            <p class="humidity"></p>
+            <p class="windSpeed"></p>    
+        </div>
+        <div class="day3">
+            <p class="temp"></p>
+            <p class="icon"></p>
+            <p class="humidity"></p>
+            <p class="windSpeed"></p>    
+        </div>
+        <div class="day4">
+            <p class="temp"></p>
+            <p class="icon"></p>
+            <p class="humidity"></p>
+            <p class="windSpeed"></p>    
+        </div>
+    </section>
+
     
     <script src="./script.js"></script>
 </body>
