add a row for the future 4 day forcast

--- a/index.html
+++ b/index.html
@@ -33,31 +33,46 @@
         <p class="indexUV"></p>
     </section>
 
-    <sectionc class="futureWeather">
-        <div class="day1">
-            <p class="temp"></p>
-            <p class="icon"></p>
-            <p class="humidity"></p>
-            <p class="windSpeed"></p>    
+    <section class="futureWeather">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3">
+                <section class="day0">
+                    <p id="day0"></p>
+                    <p id="temp0"></p>
+                    <p id="icon0"></p>
+                    <p id="humidity0"></p>
+                    <p id="windSpeed0"></p>    
+                </section>   
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <section class="day1">
+                    <p id="day1"></p>
+                    <p id="temp1"></p>
+                    <p id="icon1"></p>
+                    <p id="humidity1"></p>
+                    <p id="windSpeed1"></p>    
+                </section>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <section class="day2">
+                    <p id="day2"></p>
+                    <p id="temp2"></p>
+                    <p id="icon2"></p>
+                    <p id="humidity2"></p>
+                    <p id="windSpeed2"></p>    
+                </section>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3">
+                <section class="day3">
+                    <p id="day3"></p>
+                    <p id="temp3"></p>
+                    <p id="icon3"></p>
+                    <p id="humidity3"></p>
+                    <p id="windSpeed3"></p>    
+                </section>
+            </div>
         </div>
-        <div class="day2">
-            <p class="temp"></p>
-            <p class="icon"></p>
-            <p class="humidity"></p>
-            <p class="windSpeed"></p>    
-        </div>
-        <div class="day3">
-            <p class="temp"></p>
-            <p class="icon"></p>
-            <p class="humidity"></p>
-            <p class="windSpeed"></p>    
-        </div>
-        <div class="day4">
-            <p class="temp"></p>
-            <p class="icon"></p>
-            <p class="humidity"></p>
-            <p class="windSpeed"></p>    
-        </div>
+
     </section>
 
     
