able to present information for one of the future day weather stats

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h3 id="day"></h3>
         <p class="temp"></p>
         <p class="icon"></p>
+        <p id="description"></p>
         <p class="humidity"></p>
         <p class="windSpeed"></p>
         <p class="indexUV"></p>
@@ -40,6 +41,7 @@
                     <p id="day0"></p>
                     <p id="temp0"></p>
                     <p id="icon0"></p>
+                    <p id="description0"></p>
                     <p id="humidity0"></p>
                     <p id="windSpeed0"></p>    
                 </section>   
@@ -49,6 +51,7 @@
                     <p id="day1"></p>
                     <p id="temp1"></p>
                     <p id="icon1"></p>
+                    <p id="description1"></p>
                     <p id="humidity1"></p>
                     <p id="windSpeed1"></p>    
                 </section>
@@ -58,6 +61,7 @@
                     <p id="day2"></p>
                     <p id="temp2"></p>
                     <p id="icon2"></p>
+                    <p id="description2"></p>
                     <p id="humidity2"></p>
                     <p id="windSpeed2"></p>    
                 </section>
@@ -67,6 +71,7 @@
                     <p id="day3"></p>
                     <p id="temp3"></p>
                     <p id="icon3"></p>
+                    <p id="description3"></p>
                     <p id="humidity3"></p>
                     <p id="windSpeed3"></p>    
                 </section>
