able to see the weather clearly. they are displayed in block

--- a/index.html
+++ b/index.html
@@ -34,50 +34,51 @@
         <p class="indexUV"></p>
     </section>
 
-    <section class="futureWeather">
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-6 col-lg-3">
-                <section class="day0">
-                    <p id="day0"></p>
-                    <p id="temp0"></p>
-                    <p id="icon0"></p>
-                    <p id="description0"></p>
-                    <p id="humidity0"></p>
-                    <p id="windSpeed0"></p>    
-                </section>   
+    <section class="container">
+        <section class="futureWeather">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6 col-lg-3">
+                    <section class="day0">
+                        <h3 id="day0"></h3>
+                        <p id="temp0"></p>
+                        <p id="icon0"></p>
+                        <p id="description0"></p>
+                        <p id="humidity0"></p>
+                        <p id="windSpeed0"></p>    
+                    </section>   
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <section class="day1">
+                        <h3 id="day1"></h3>
+                        <p id="temp1"></p>
+                        <p id="icon1"></p>
+                        <p id="description1"></p>
+                        <p id="humidity1"></p>
+                        <p id="windSpeed1"></p>    
+                    </section>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <section class="day2">
+                        <h3 id="day2"></h3>
+                        <p id="temp2"></p>
+                        <p id="icon2"></p>
+                        <p id="description2"></p>
+                        <p id="humidity2"></p>
+                        <p id="windSpeed2"></p>    
+                    </section>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <section class="day3">
+                        <h3 id="day3"></h3>
+                        <p id="temp3"></p>
+                        <p id="icon3"></p>
+                        <p id="description3"></p>
+                        <p id="humidity3"></p>
+                        <p id="windSpeed3"></p>    
+                    </section>
+                </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                <section class="day1">
-                    <p id="day1"></p>
-                    <p id="temp1"></p>
-                    <p id="icon1"></p>
-                    <p id="description1"></p>
-                    <p id="humidity1"></p>
-                    <p id="windSpeed1"></p>    
-                </section>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                <section class="day2">
-                    <p id="day2"></p>
-                    <p id="temp2"></p>
-                    <p id="icon2"></p>
-                    <p id="description2"></p>
-                    <p id="humidity2"></p>
-                    <p id="windSpeed2"></p>    
-                </section>
-            </div>
-            <div class="col-12 col-md-6 col-lg-3">
-                <section class="day3">
-                    <p id="day3"></p>
-                    <p id="temp3"></p>
-                    <p id="icon3"></p>
-                    <p id="description3"></p>
-                    <p id="humidity3"></p>
-                    <p id="windSpeed3"></p>    
-                </section>
-            </div>
-        </div>
-
+        </section>
     </section>
 
     
