--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="indexUV"></p>
     </section>
 
-    <section class="container">
+    <section class="container my-5">
         <section class="futureWeather">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-6 col-lg-3">
