add comments to the html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="text" class="inputCity">
         </div>
     </aside>
-
+    <!-- this section will contain the classes used ofr the current day information -->
     <section class="todayWeather">
         <h1 class="cityName"></h1>
         <h3 id="day"></h3>
@@ -34,10 +34,11 @@
         <p class="windSpeed"></p>
         <p class="indexUV"></p>
     </section>
-
+<!-- this container will be for the future day forcast and use bootstrap to put the days in 4 columns  -->
     <section class="container my-5">
         <section class="futureWeather">
             <div class="row justify-content-center">
+                <!-- day 1 -->
                 <div class="col-12 col-md-6 col-lg-3">
                     <section class="day0">
                         <h3 id="day0"></h3>
@@ -48,6 +49,7 @@
                         <p id="windSpeed0"></p>    
                     </section>   
                 </div>
+                <!-- day 2 -->
                 <div class="col-12 col-md-6 col-lg-3">
                     <section class="day1">
                         <h3 id="day1"></h3>
@@ -58,6 +60,7 @@
                         <p id="windSpeed1"></p>    
                     </section>
                 </div>
+                <!-- day 3 -->
                 <div class="col-12 col-md-6 col-lg-3">
                     <section class="day2">
                         <h3 id="day2"></h3>
@@ -68,6 +71,7 @@
                         <p id="windSpeed2"></p>    
                     </section>
                 </div>
+                <!-- day 4 -->
                 <div class="col-12 col-md-6 col-lg-3">
                     <section class="day3">
                         <h3 id="day3"></h3>
