added image to the repo and fit the image as the background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
 </head>
-<body>
+<body style="background: url('./stormImage.jpg');background-repeat: no-repeat ;background-size: cover;">
     <header>
         <h1>Weather Dashboard</h1>
         <p id="todayDate"></p>
