added a function for local storage in js and added a button in html for the locally store citynames to appear

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
 </head>
-<body style="background: url('./stormImage.jpg');background-repeat: no-repeat ;background-size: cover;">
+<body style="background: url('./photoWeather.jpeg');background-repeat: no-repeat ;">
     <header>
         <h1>Weather Dashboard</h1>
         <p id="todayDate"></p>
@@ -21,6 +21,7 @@
             <h2><strong>City:</strong></h2>
             <input type="submit" value="Submit" class="buttonSubmit">
             <input type="text" class="inputCity">
+            <button class="storedCity"></button>
         </div>
     </aside>
     <!-- this section will contain the classes used ofr the current day information -->
