--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
 </head>
@@ -21,7 +22,8 @@
             <h2><strong>City:</strong></h2>
             <input type="submit" value="Submit" class="buttonSubmit">
             <input type="text" class="inputCity">
-            <button class="storedCity"></button>
+            <h4>Search History</h4>
+            <div id='searchHistory'></div>
         </div>
     </aside>
     <!-- this section will contain the classes used ofr the current day information -->
